Update carly role

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -22,7 +22,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 <CardGrid >
 	<Card title="Carly">
-	<p>Owner</p>
+	<p>Owner and Docs</p>
 	<img src="https://dig.blob.core.windows.net/public/carlydiscord.webp?sp=r&st=2024-08-31T18:40:19Z&se=2030-01-01T01:40:19Z&spr=https&sv=2022-11-02&sr=c&sig=GONdaubyx2Hczt7dae%2Fvlnocb7VfisxotnLEstT8w9Y%3D" width="80" height="80"></img>
 	</Card>
 	<Card title="Husky">
