Update lo tital to Client Solutions

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -42,7 +42,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 		<img class="object-cover w-28 rounded-lg h-28" src="https://dig.blob.core.windows.net/public/lo.webp?sp=r&st=2024-08-31T18:40:19Z&se=2030-01-01T01:40:19Z&spr=https&sv=2022-11-02&sr=c&sig=GONdaubyx2Hczt7dae%2Fvlnocb7VfisxotnLEstT8w9Y%3D" alt="HuskyNZ Logo"/>
 		<div class="flex flex-col justify-between p-4 leading-normal">
 			<h5 class="text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Lo</h5>
-			<p class="font-normal text-gray-700 dark:text-gray-400">Modpack Development</p>
+			<p class="font-normal text-gray-700 dark:text-gray-400">Client Solutions</p>
 			<a href="mailto://logangstatv@dignation.nz" class="text-gray-700 dark:text-gray-400">logangstatv@dignation.nz</a>
 
 		</div>
