Update index.mdx to add pronous to the meet the team grid

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -24,7 +24,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<div href="#" class="col-span-12 md:col-span-6 border p-4 flex flex-col items-center rounded-lg shadow md:flex-row md:max-w-xl mt-4">
 		<img class="object-cover w-28 rounded-lg h-28" src="https://dig.blob.core.windows.net/public/carlydiscord.webp?sp=r&st=2024-08-31T18:40:19Z&se=2030-01-01T01:40:19Z&spr=https&sv=2022-11-02&sr=c&sig=GONdaubyx2Hczt7dae%2Fvlnocb7VfisxotnLEstT8w9Y%3D" alt="HuskyNZ Logo"/>
 		<div class="flex flex-col justify-between p-4 leading-normal">
-			<h5 class="text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Carly</h5>
+			<h5 class="text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Carly - She/Her</h5>
 			<p class="font-normal text-gray-700 dark:text-gray-400">Owner and Docs</p>
 			<a href="mailto://carly@dignation.nz" class="font-normal text-gray-700 dark:text-gray-400">carly@dignation.nz</a>
 		</div>
@@ -32,7 +32,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<div href="#" class="col-span-12 md:col-span-6 border p-4 flex flex-col items-center rounded-lg shadow md:flex-row md:max-w-xl mt-0">
 		<img class="object-cover w-28 rounded-lg h-28" src="https://serv.husky.nz/logo/default.png" alt="HuskyNZ Logo"/>
 		<div class="flex flex-col justify-between p-4 leading-normal">
-			<h5 class="text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Husky</h5>
+			<h5 class="text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Husky - They/Them</h5>
 			<p class="font-normal text-gray-700 dark:text-gray-400">Website and Server Solutions</p>
 			<a href="mailto://peter@dignation.nz" class="text-gray-700 dark:text-gray-400">peter@dignation.nz</a>
 
@@ -41,7 +41,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<div href="#" class="col-span-12 md:col-span-6 border p-4 flex flex-col items-center rounded-lg shadow md:flex-row md:max-w-xl mt-0">
 		<img class="object-cover w-28 rounded-lg h-28" src="https://dig.blob.core.windows.net/public/lo.webp?sp=r&st=2024-08-31T18:40:19Z&se=2030-01-01T01:40:19Z&spr=https&sv=2022-11-02&sr=c&sig=GONdaubyx2Hczt7dae%2Fvlnocb7VfisxotnLEstT8w9Y%3D" alt="HuskyNZ Logo"/>
 		<div class="flex flex-col justify-between p-4 leading-normal">
-			<h5 class="text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Lo</h5>
+			<h5 class="text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Lo - He/Him</h5>
 			<p class="font-normal text-gray-700 dark:text-gray-400">Client Solutions</p>
 			<a href="mailto://logangstatv@dignation.nz" class="text-gray-700 dark:text-gray-400">logangstatv@dignation.nz</a>
 
@@ -50,7 +50,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<div href="#" class="col-span-12 md:col-span-6 border p-4 flex flex-col items-center rounded-lg shadow md:flex-row md:max-w-xl mt-0">
 		<img class="object-cover w-28 rounded-lg h-28" src="https://dig.blob.core.windows.net/public/kas.webp?sp=r&st=2024-08-31T18:40:19Z&se=2030-01-01T01:40:19Z&spr=https&sv=2022-11-02&sr=c&sig=GONdaubyx2Hczt7dae%2Fvlnocb7VfisxotnLEstT8w9Y%3D" alt="HuskyNZ Logo"/>
 		<div class="flex flex-col justify-between p-4 leading-normal">
-			<h5 class="text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Kas</h5>
+			<h5 class="text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Kas - Any</h5>
 			<p class="font-normal text-gray-700 dark:text-gray-400">Community Manager</p>
 			<a href="mailto://kas@dignation.nz" class="font-normal text-gray-700 dark:text-gray-400">kas@dignation.nz</a>
 		</div>
